@@ -1,5 +1,6 @@
 ===== 1.9.1 (Oct ??, 2013) =====
 * Updated Czech localization (by Marek Pavelka)
+* mobi: blockquote tag support
 
 ===== 1.9 (Oct 14, 2013) =====
 * Dictionary support
